# research-copilot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
docs/: API.md  HOW_IT_WORKS.md  MCP_SERVER.md  PERFORMANCE.md  SECURITY.md  SETUP.md
mcp_server/: .env.example  .gitignore  package-lock.json  package.json  vitest.config.ts
mcp_server/src/: index.ts  server.ts
mcp_server/src/config/: index.ts
mcp_server/src/db/: client.ts  index.ts  schema.ts
mcp_server/src/errors/: index.ts
mcp_server/src/middleware/: index.ts  rateLimit.ts
mcp_server/src/services/: index.ts  notesService.ts
mcp_server/src/tools/: fetchPage.ts  getNote.ts  index.ts  (+3 more)
mcp_server/tests/: notesService.test.ts  rateLimit.test.ts  server.test.ts  setup.ts
prompts/: deep_mode.md  quick_mode.md  system_prompt.md  tool_definitions.md
scripts/: start.sh  test.sh  validate_env.py
src/: __init__.py
src/agent/: __init__.py  citations.py  orchestrator.py  parser.py  prompts.py
src/api/: __init__.py  notes.py  research.py  responses.py
src/clients/: __init__.py  mcp_client.py  ollama_client.py
src/errors/: __init__.py  codes.py  exceptions.py  handlers.py  messages.py
src/models/: __init__.py  notes.py  research_mode.py  responses.py
src/ui/: __init__.py  components.py  design_tokens.py  state.py
src/utils/: __init__.py  config.py  logger.py  validators.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_citations.py  test_config.py  test_errors.py  test_parser.py
